# flask-board

./: .flask8  .gitignore  mypy.ini  package.json  pnpm-lock.yaml  requirements.txt  setup.cfg  tailwind.config.js
app/: __init__.py  config.py  forms.py  hooks.py
app/models/: __init__.py  core.py  task.py
app/scripts/: pupulate_db.py
app/static/css/: input.css  output.css  reset.css
app/static/js/: main.js
app/templates/: _macros.html  base.html  base_core.html  form.py  login.html  register.html
app/templates/_partials/: add_task_modal.html  aside.html  header.html  task_item.html
app/templates/core/: login.html  register.html
app/templates/task/: base.html  index.html
app/views/: __init__.py  core.py  task.py
migrations/versions/: 13d5c7706e74_.py  17cee973e6b4_.py  21942c28d7cf_.py  2fccca1f2376_.py  3857d7dc0c67_.py  b82642ed7b95_.py  bcfa3b75618c_.py
