[metadata]
name = your_project_name
version = 0.1.0

[options]
packages = find:
include_package_data = True

[mypy]
# Diretórios a serem verificados
files = app, scripts

# Ignorar stubs e imports específicos
ignore_missing_imports = True
exclude = (?x)(
    migrations   # Ignora diretórios de migração do SQLAlchemy
    | tests      # Ignora diretórios de testes, se necessário
)

# Outras configurações úteis
disallow_untyped_calls = True
disallow_untyped_defs = True
check_untyped_defs = True
warn_unused_ignores = True
